# NotesPortal

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
embed/: mystudio.template.ini
frontend/: README.md  admin.html  create_user.html  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: AdminPage.vue  App.vue  CreateUserPage.vue  admin.ts  create_user.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AddNote.vue  StudentGrid.vue  StudentRow.vue
src/: admin_routes.rs  api_routes.rs  counter.rs  db.rs  embed_routes.rs  integration.rs  login.rs  main.rs
