[package]
name = "notes-api-rs"
authors = ["Evan Calderon <evan.calderon@codeninjas.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-extra = { version = "0.7", features = ["cookie-private", "form", "multipart"] }
axum-macros = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
cookie = "0.17"
csv = "1.2"
lazy_static = "1.4"
local-ip-address = "0.5"
mime_guess = "2.0"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["serde_json", "json", "blocking"] }
rust-embed = "6.6"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros", "signal", "tracing", "rt-multi-thread"] }
tower-http = { version = "0.4", features = ["fs"] }
uuid = { version = "1.3", features = ["v4"] }
aws-config = "0.55"
aws-sdk-dynamodb = "0.28"
aws-credential-types = "0.55"
serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
futures = "0.3"
env_logger = "0.10.0"
serde-diff = "0.4"
type-equalities = "0.3.1"

[build-dependencies]
npm_rs = "1.0.0"
